--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     
     <!-- 2. Подключаем Babel для транспайляции JSX прямо в браузере -->
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div id="root"></div>
